# faff-core

./: Cargo.toml  DEVELOPMENT.md  MIGRATION.md  README.md  RELEASE_PROCESS.md  TODO.md  faff_core.pyi  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  publish-dev.yml  release.yml
bindings-python/: Cargo.toml  pyproject.toml
bindings-python/python/faff_core/: faff_core.pyi
bindings-python/src/: lib.rs
bindings-python/src/python/: mod.rs  storage.rs  workspace.rs
bindings-python/src/python/managers/: identity_manager.rs  log_manager.rs  mod.rs  plan_manager.rs  plugin_manager.rs  timesheet_manager.rs
bindings-wasm/: Cargo.toml
bindings-wasm/src/: lib.rs
bindings-wasm/src/wasm/: mod.rs  models.rs  storage.rs  workspace.rs
core/: Cargo.toml  build.rs
core/src/: file_system_storage.rs  lib.rs  plugins.rs  storage.rs  test_utils.rs  version.rs  workspace.rs
core/src/managers/: identity_manager.rs  log_manager.rs  mod.rs  plan_manager.rs  plugin_manager.rs  timesheet_manager.rs
core/src/models/: intent.rs  log.rs  mod.rs  plan.rs  session.rs  timesheet.rs  valuetype.rs
core/src/py_models/: config.rs  intent.rs  log.rs  plan.rs  session.rs  timesheet.rs  toy.rs
core/tests/: integration_tests.rs
faff_core/: __init__.py  faff_core.pyi  managers.py  models.py  py.typed
src/: bindings.rs  file_system_storage.rs  lib.rs  models.rs  plugins.rs  storage.rs  test_utils.rs  workspace.rs
src/bindings/python/: intent.rs  log.rs  log_manager.rs  mod.rs  oop.rs  plan.rs  session.rs  storage.rs  timesheet.rs  toy.rs  type_mapping.rs  workspace.rs
src/bindings/python/managers/: identity_manager.rs  log_manager.rs  mod.rs  plan_manager.rs  plugin_manager.rs  timesheet_manager.rs
src/bindings/python/models/: config.rs  intent.rs  log.rs  mod.rs  plan.rs  session.rs  timesheet.rs
src/managers/: identity_manager.rs  log_manager.rs  mod.rs  plan_manager.rs  timesheet_manager.rs
src/models/: config.rs  intent.rs  log.rs  mod.rs  plan.rs  session.rs  timesheet.rs  toy.rs  valuetype.rs
