[package]
name = "faff-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "faff_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
anyhow = "1.0.98"
thiserror = "2.0.17"
