[package]
name = "faff-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "faff_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26"
pythonize = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_canonical_json = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
slug = "0.1.6"
anyhow = "1.0.98"
thiserror = "2.0.17"
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
regex = "1.11"
glob = "0.3"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3.14"
