[package]
name = "faff-core-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core library
faff-core = { path = "../core" }

# Wasm bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Serialization (for JS interop)
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Date/time
chrono = { workspace = true }
chrono-tz = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# JS types
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
